# Python_Apps

./: .gitignore  MyIPaddres.py  README.md  exception.py  find_pass.py  grabber.py  help_tools.txt  investcalcult.py  mypy.ini  online_chat.py  oop.py  parser.py  parser_file.py  pascal_triangle.py  pyproject.toml  requirements.txt  rock.py  setup.cfg  test.html  typing_objects.py
.docs/: INSTALL.md
.docs/scripts/: Makefile  activate_area.sh
bots/djoger_bot/: .gitignore  README.md  bot.py
bots/djoger_bot/server/server/: settings.py  urls.py
bots/djoger_bot/server/server/apps/botrequest/: apps.py  urls.py  views.py
bots/djoger_bot/server/server/apps/botrequest/templates/botrequest/: home.html
bots/djoger_bot/server/server/templates/: base.html
complete/calculation/: main.py
complete/database/: address_book.db  create_table.py  main.py
complete/imageviewer/: main.py  main.pyi
db/: product.db  sqlachemy.py  vk.json  vk_api_json.py
exceptions/: exception.py
extends/: embed.c  pstr.c
extends/tester/: Ccompute.c  Makefile  README.md  api.h  checkC.py  compute.py  setup.py
graphics/stockMarket/: QQQ.csv  graph.py
parsers/: grabber.py  pascal_triangle.py
tools/: audio.py  authentication.py  investcalcult.py  oop.py  price.py
tools/Plotly/: plotly.py  setup.py
tools/yandex/: Average_Networl_Latency.rst  average_network_latency.py  task_1.py  task_2.py  task_3.py
types/: args_kwargs_func.py  type_hinting.py  typing_scale.py
