[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["David2261 <bulatnasirov2003@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^9.2.0"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
numpy-stl = "^2.17.1"
plotly = "^5.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
