[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["David2261 <bulatnasirov2003@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^9.2.0"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
aiogram = "^2.25.1"
python-decouple = "^3.7"
django = "^4.1.7"
sqlalchemy = "^2.0.9"
mypy = "^1.4.1"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"